# sakeena_aslam_giaic_hackthon_1_book_doc

./: .gitignore  test_connection.py  test_modular_imports.py  test_qdrant.py
.claude/: settings.local.json
.specify/memory/: constitution.md
backend/: README.md  agent.py  check_qdrant_methods.py  initialize_qdrant.py  main.py  pyproject.toml  requirements.txt  test_agent_run.py  test_full_pipeline.py  test_imports.py  test_main.py  test_retrieval_validation.py
backend/config/: settings.py
backend/models/: dataclasses.py  schemas.py
backend/services/: agent_service.py  chunking.py  embedding.py  ingestion.py  retrieval.py  storage.py  validation.py
backend/tests/: conftest.py
backend/tests/integration/: test_end_to_end.py
backend/tests/unit/: test_chunking.py  test_embedding.py  test_ingestion.py  test_retrieval.py  test_storage.py  test_validation.py
backend/utils/: helpers.py  validators.py
frontend/: docusaurus.config.ts  package-lock.json  sidebars.ts
specs/001-content-embedding-storage/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-modular-retrieval/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-retrieval-validation/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-rag-agent-integration/: data-model.md  plan.md  quickstart.md  research.md  tasks.md
specs/01-ros2-nervous-system/: plan.md  spec.md  tasks.md
specs/02-docusaurus-book-structure/: plan.md  spec.md
specs/03-digital-twin-simulation/: plan.md  spec.md  tasks.md
(+86 files in other folders)
